--- a/movie.html
+++ b/movie.html
@@ -8,19 +8,18 @@
 </head>
 <body>
 <div class="favo">
-    <h2>Favorite Movie Franchise</h2>
-    <div>
-        <un>
-            <li>The Matrix</li>
-            <li>Star Wars</li>
-            <li>Harry Porter</li>
-            <li>Lord of the Rings</li>
-            <li>Marvel</li>
-        </un>
+    <h2 id="mainheading">Favorite Movie Franchise</h2>
+    <div class="thelist">
+        <ul>
+            <li class="listitems">The Matrix</li>
+            <li class="listitems">Star Wars</li>
+            <li class="listitems">Harry Porter</li>
+            <li class="listitems">Lord of the Rings</li>
+            <li class="listitems">Marvel</li>
+        </ul>
     </div>
 
 </div>
-
-
+<script src="app.js"></script>
 </body>
 </html>
