starting event handlers

--- a/movie.html
+++ b/movie.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">\
+    <link rel="stylesheet"
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 </head>
 <body>
 <div class="favo">
@@ -20,6 +22,28 @@
     </div>
 
 </div>
+
+<h1>This is the next part with event handlers</h1>
+
+<div>
+    <h2 class="event_title">Event listeners</h2>
+    <div class="event_1">
+        <h3>Example 1</h3>
+        <button class="enter">Enter</button>
+    </div>
+</div>
+
+<div>
+    <h2>Frequently Asked Questions</h2>  <span class="material-symbols-outlined">
+        stat_minus_1
+    </span>
+</div>
+
+
+
+
 <script src="app.js"></script>
 </body>
 </html>
+
+<!-- this is a new type -->
