--- a/movie.html
+++ b/movie.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="style.css">\
     <link rel="stylesheet"
         href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link
+            href="https://fonts.googleapis.com/css2?family=Arimo:ital@1&family=Pixelify+Sans:wght@500&family=Roboto+Slab:wght@500&family=Roboto:wght@100&display=swap"
+            rel="stylesheet">
 </head>
 <body>
 <div class="favo">
@@ -34,14 +39,23 @@
 </div>
 
 <div>
-    <h2>Frequently Asked Questions</h2>  <span class="material-symbols-outlined">
-        stat_minus_1
-    </span>
+    <h2>Frequently Asked Questions</h2> 
+     <button class="material-symbols-outlined">Reveal hidden</button>
+    <h2 class="hidden">This is the hidden text</h2>
 </div>
 
 
 
 
+<div class="second_circle">
+<h2>2</h2>
+
+        <div class="first_circle">
+            <h2>1</h2>
+            <button class="click">click</button>
+        </div>
+        <button class="click">click</button>
+</div>
 <script src="app.js"></script>
 </body>
 </html>
