--- a/movie.html
+++ b/movie.html
@@ -45,17 +45,20 @@
 </div>
 
 
+<div class="container">
+    
 
+        <div class="second_circle">
+        <h2>2</h2>
 
-<div class="second_circle">
-<h2>2</h2>
-
-        <div class="first_circle">
-            <h2>1</h2>
-            <button class="click">click</button>
+                <div class="first_circle">
+                    <h2>1</h2>
+                    <button class="click">click</button>
+                </div>
+                <button class="click1">click</button>
         </div>
-        <button class="click">click</button>
 </div>
+
 <script src="app.js"></script>
 </body>
 </html>
