finishing up the javascript

--- a/movie.html
+++ b/movie.html
@@ -45,7 +45,7 @@
 </div>
 
 
-<div class="container">
+
     
 
         <div class="second_circle">
@@ -55,8 +55,20 @@
                     <h2>1</h2>
                     <button class="click">click</button>
                 </div>
-                <button class="click1">click</button>
+                
         </div>
+
+
+
+<div class="container">
+    <ul class="lastlast">
+        <li class="football">Football</li>
+        <li class="baseball">Basketball</li>
+        <li class="boxing">Boxing</li>
+        <li class="tennis">Tennis</li>
+        <li class="golf">Golf</li>
+    </ul>
+
 </div>
 
 <script src="app.js"></script>
